--- a/Elshan_Yusifli_8011_assignment2/task_01/index.html
+++ b/Elshan_Yusifli_8011_assignment2/task_01/index.html
@@ -27,6 +27,15 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <h1>This is Task 1</h1>
     <canvas id="webgl-canvas" width="400" height="300"></canvas>
+    <p>you can click on Task 2 to see it</p>
+    <h1>Commands: NOTE: do not use uppercase  <a href="../task_02/index.html">Task 2</a>
+        <p>T (when 'T' key is pressed): Camera should give you top-side view.</p>
+        <p>L: Camera should give you left-side view.</p>
+        <p>F: Camera should give you front-side view.</p>
+        <p>D: Should rotate the camera (not object) clockwise by some degree (theta).</p>
+        <p>A: Should rotate the camera counter-clockwise.</p>
+    </h1>
 </body>
 </html>
