--- a/Elshan_Yusifli_8011_assignment2/task_02/index.html
+++ b/Elshan_Yusifli_8011_assignment2/task_02/index.html
@@ -27,6 +27,13 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <h1>This is Task 2</h1>
     <canvas id="webgl-canvas" width="400" height="300"></canvas>
+    <p>you can click on Task 3 or 1 to see it</p>
+    <h1>NOTE: do not use uppercase <a href="../task_03/index.html">Task 3</a><a href="../task_01/index.html">|| Task 1</a><p>I: Camera should give you isometric view.</p>
+        <p>W: Camera should zoom in (by changing clipping volume)</p>
+        <p>S: Camera should zoom out</p></h1>
+
+    
 </body>
 </html>
