--- a/Elshan_Yusifli_8011_assignment2/task_03/index.html
+++ b/Elshan_Yusifli_8011_assignment2/task_03/index.html
@@ -27,7 +27,9 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <h1>This is Task 3</h1>
     <canvas id="webgl-canvas" width="400" height="300"></canvas>
-    <h1>Just use w and s to see full object</h1>
+    <p>you can click on Task 4 or 2 to see it</p>
+    <h1>Just use w and s to see full object NOTE: do not use uppercase. <a href="../task_04/index.html">Task 4</a><a href="../task_02/index.html">|| Task 2</a></h1>
 </body>
 </html>
