--- a/Elshan_Yusifli_8011_assignment2/task_04/index.html
+++ b/Elshan_Yusifli_8011_assignment2/task_04/index.html
@@ -27,7 +27,11 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <h1>This is Task 4</h1>
     <canvas id="webgl-canvas" width="400" height="300"></canvas>
-    <h1>Just use w and s to see full object</h1>
+    <h1>Just use w and s to see full object. NOTE: do not use uppercase <a href="../task_01/index.html">Task 1</a><a href="../task_03/index.html">|| Task 3</a></h1>
+    <p>O: Should switch to orthographic view</p>
+    <p>P: Should switch to perspective view</p> 
+    <p>I recommend pres I then pres O and P to see difference between views</p>
 </body>
 </html>
